--- a/.github/workflows/commetsUpdate.yaml
+++ b/.github/workflows/commetsUpdate.yaml
@@ -3,7 +3,7 @@ name: Update README
 on:
   push:
     branches:
-      - PankajKumar  # change to the branch you want to monitor
+      - main  # change to the branch you want to monitor
 
 jobs:
   update_readme:
