--- a/.github/workflows/commetsUpdate.yaml
+++ b/.github/workflows/commetsUpdate.yaml
@@ -3,7 +3,7 @@ name: Update README
 on:
   push:
     branches:
-      - PankajKumar  # change to the branch you want to monitor
+      - main  # change to the branch you want to monitor
 
 jobs:
   update_readme:
@@ -23,9 +23,12 @@ jobs:
         run: |
           readme=$(cat README.md)
           table="\n| Commit Author | Message | Date |\n| --- | --- | --- |\n"
-          commits=$(echo '${{ steps.get_commits.outputs.commits }}' | jq -r '.[] | "\(.commit.author.name) | \(.commit.message) | \(.commit.author.date)"')
-          for commit in "$commits"; do
-            table+="$commit\n"
+          commits_json='${{ steps.get_commits.outputs.commits }}'
+          commits=$(echo "$commits_json" | jq -r '.[] | "\(.commit.author.name), \(.commit.message), \(.commit.author.date)"')
+          IFS=$'\n'
+          for commit in $commits; do
+            IFS=',' read -r author message date <<< "$commit"
+            table+="$author | $message | $date\n"
           done
           echo -e "${readme/table_start\n*table_end/table_start$tabletable_end}" > README.md
 
