--- a/.github/workflows/commetsUpdate.yaml
+++ b/.github/workflows/commetsUpdate.yaml
@@ -58,7 +58,10 @@ jobs:
       
       - name: Push README update
         run: |
-          git config --global user.name 'Github Actions'
-          git config --global user.email '41898282+github-actions[bot]@users.noreply.github.com'
-          git commit -am ':books: update commit history'
-          git push
+            git config --global user.name 'Github Actions'
+            git config --global user.email '41898282+github-actions[bot]@users.noreply.github.com'
+            git add README.md
+            git commit -m ':books: update commit history'
+            git push
+        env:
+          GH_PAT: ${{ secrets.commit_pg }}
