--- a/.github/workflows/commetsUpdate.yaml
+++ b/.github/workflows/commetsUpdate.yaml
@@ -64,4 +64,4 @@ jobs:
             git commit -m ':books: update commit history'
             git push
         env:
-          GH_PAT: ${{ secrets.commit_pg }}
+          GH_PAT: ${{ secrets.COMMIT_PG }}
