--- a/.github/workflows/commetsUpdate.yaml
+++ b/.github/workflows/commetsUpdate.yaml
@@ -58,10 +58,11 @@ jobs:
       
       - name: Push README update
         run: |
-            git config --global user.name 'Github Actions'
-            git config --global user.email '41898282+github-actions[bot]@users.noreply.github.com'
-            git add README.md
-            git commit -m ':books: update commit history'
-            git push
+          git config --global user.name 'Github Actions'
+          git config --global user.email '41898282+github-actions[bot]@users.noreply.github.com'
+          git add README.md
+          git commit -m ':books: update commit history'
+          git push https://${{ secrets.COMMIT_PG }}@github.com/${{ github.repository }}.git
         env:
-          GH_PAT: ${{ secrets.COMMIT_PG }}
+          COMMIT_PG: ${{ secrets.COMMIT_PG }}
+
