--- a/.github/workflows/commetsUpdate.yaml
+++ b/.github/workflows/commetsUpdate.yaml
@@ -60,9 +60,6 @@ jobs:
         run: |
           git config --global user.name 'Github Actions'
           git config --global user.email '41898282+github-actions[bot]@users.noreply.github.com'
-          git add README.md
-          git commit -m ':books: update commit history'
-          git push https://${{ secrets.COMMIT_PG }}@github.com/${{ github.repository }}.git
-        env:
-          COMMIT_PG: ${{ secrets.COMMIT_PG }}
+          git commit -am ':sparkles: update commit history'
+          git push
 
