--- a/.github/workflows/commetsUpdate.yaml
+++ b/.github/workflows/commetsUpdate.yaml
@@ -1,8 +1,12 @@
 name: Update README
 
 on:
-  schedule:
-    - cron: '0 0 * * *'  # this updates the README.md file every day at 00:00
+  repository_dispatch:
+    types: [new_commit]
+
+# on:
+#   schedule:
+#     - cron: '0 0 * * *'  # this updates the README.md file every day at 00:00
 
 jobs:
   update_readme:
