--- a/.github/workflows/commetsUpdate.yaml
+++ b/.github/workflows/commetsUpdate.yaml
@@ -16,7 +16,7 @@ jobs:
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
-      
+
       - name: Get last 5 commits
         uses: actions/github-script@v6
         with:
@@ -52,13 +52,13 @@ jobs:
             const result = await github.graphql(query, variables)
             const renderCommits = (commits) => {
               return commits.reduce((prev, curr) => {
-                return `${prev}| <img width="24" src="${curr.author.avatarUrl}" alt="${curr.author.name}" /> ${curr.author.name} |${new Date(curr.author.date).toLocaleString()}|${curr.message}|\n`;
-              }, "| Author | Date | Message |\n|---|---|---|\n");
+                return `${prev}| <img width="24" src="${curr.author.avatarUrl}" alt="${curr.author.name}" /> ${curr.author.name} |${new Date(curr.author.date).toLocaleString()}|${context.repo.repo}|${curr.message}|\n`;
+              }, "| Author | Date | Repository | Message |\n|---|---|---|---|\n");
             };
             const fileSystem = require('fs');
             const readme = fileSystem.readFileSync('README.md', 'utf8');
             fileSystem.writeFileSync('README.md', readme.replace(/(?<=<!-- Commits -->.*\n)[\S\s]*?(?=<!-- \/Commits -->|$(?![\n]))/gm, renderCommits(result.repository.refs.nodes[0].target.history.nodes)), 'utf8');
-      
+
       - name: Push README update
         run: |
           git config --global user.name 'Github Actions'
