--- a/.github/workflows/commetsUpdate.yaml
+++ b/.github/workflows/commetsUpdate.yaml
@@ -21,21 +21,26 @@ jobs:
         uses: actions/github-script@v6
         with:
           script: |
-            const query = `query($owner:String!, $name:String!) {
-              repository(owner:$owner, name:$name){
-                refs(refPrefix: "refs/heads/", first:1, orderBy:{field: TAG_COMMIT_DATE, direction:DESC}) {
+            const query = `query($login: String!) {
+              user(login: $login) {
+                repositories(first: 100, privacy: PUBLIC) {
                   nodes {
-                    target {
-                      ... on Commit {
-                        history(first: 5) {
-                          nodes {
-                            author {
-                              avatarUrl(size: 24)
-                              name
-                              email
-                              date
+                    name
+                    refs(refPrefix: "refs/heads/", first: 1, orderBy: {field: TAG_COMMIT_DATE, direction: DESC}) {
+                      nodes {
+                        target {
+                          ... on Commit {
+                            history(first: 5) {
+                              nodes {
+                                author {
+                                  avatarUrl(size: 24)
+                                  name
+                                  email
+                                  date
+                                }
+                                message
+                              }
                             }
-                            message
                           }
                         }
                       }
@@ -44,24 +49,40 @@ jobs:
                 }
               }
             }`;
+
             const variables = {
-              owner: context.repo.owner,
-              name: context.repo.repo,
+              login: "${{ github.repository_owner }}",
+            };
+
+            const result = await github.graphql(query, variables);
+
+            let commits = [];
+            for (const repo of result.user.repositories.nodes) {
+              if (repo.refs.nodes.length > 0) {
+                const commitHistory = repo.refs.nodes[0].target.history.nodes;
+                for (let i = 0; i < Math.min(commitHistory.length, 5); i++) {
+                  commits.push({
+                    repository: repo.name,
+                    commit: commitHistory[i]
+                  });
+                }
+              }
             }
 
-            const result = await github.graphql(query, variables)
             const renderCommits = (commits) => {
               return commits.reduce((prev, curr) => {
-                return `${prev}| <img width="24" src="${curr.author.avatarUrl}" alt="${curr.author.name}" /> ${curr.author.name} |${new Date(curr.author.date).toLocaleString()}|${context.repo.repo}|${curr.message}|\n`;
+                return `${prev}| <img width="24" src="${curr.commit.author.avatarUrl}" alt="${curr.commit.author.name}" /> ${curr.commit.author.name} |${new Date(curr.commit.author.date).toLocaleString()}|${curr.repository}|${curr.commit.message}|\n`;
               }, "| Author | Date | Repository | Message |\n|---|---|---|---|\n");
             };
+
             const fileSystem = require('fs');
             const readme = fileSystem.readFileSync('README.md', 'utf8');
-            fileSystem.writeFileSync('README.md', readme.replace(/(?<=<!-- Commits -->.*\n)[\S\s]*?(?=<!-- \/Commits -->|$(?![\n]))/gm, renderCommits(result.repository.refs.nodes[0].target.history.nodes)), 'utf8');
+            fileSystem.writeFileSync('README.md', readme.replace(/(?<=<!-- Commits -->.*\n)[\S\s]*?(?=<!-- \/Commits -->|$(?![\n]))/gm, renderCommits(commits)), 'utf8');
 
       - name: Push README update
         run: |
           git config --global user.name 'Github Actions'
           git config --global user.email '41898282+github-actions[bot]@users.noreply.github.com'
-          git commit -am ':sparkles: update commit history'
+          git add README.md
+          git commit -m ':sparkles: update commit history'
           git push
