--- a/.github/workflows/commetsUpdate.yaml
+++ b/.github/workflows/commetsUpdate.yaml
@@ -21,13 +21,13 @@ jobs:
         uses: actions/github-script@v6
         with:
           script: |
-            const query = `
-              query($login: String!) {
-                user(login: $login) {
-                  repositories(first: 100, privacy: PUBLIC) {
-                    nodes {
-                      name
-                      defaultBranchRef {
+            const query = `query($login: String!) {
+              user(login: $login) {
+                repositories(first: 100, privacy: PUBLIC) {
+                  nodes {
+                    name
+                    refs(refPrefix: "refs/heads/", first: 1, orderBy: {field: TAG_COMMIT_DATE, direction: DESC}) {
+                      nodes {
                         target {
                           ... on Commit {
                             history(first: 5) {
@@ -47,7 +47,8 @@ jobs:
                     }
                   }
                 }
-              }`;
+              }
+            }`;
 
             const variables = {
               login: "${{ github.repository_owner }}",
@@ -57,18 +58,18 @@ jobs:
 
             let commits = [];
             for (const repo of result.user.repositories.nodes) {
-              if (repo.defaultBranchRef.target.history.nodes.length > 0) {
-                const commit = repo.defaultBranchRef.target.history.nodes[0];
-                commits.push({
-                  repository: repo.name,
-                  commit: commit
-                });
+              if (repo.refs.nodes.length > 0) {
+                const commitHistory = repo.refs.nodes[0].target.history.nodes;
+                for (let i = 0; i < Math.min(commitHistory.length, 5); i++) {
+                  commits.push({
+                    repository: repo.name,
+                    commit: commitHistory[i]
+                  });
+                }
               }
             }
-
             commits.sort((a, b) => new Date(b.commit.author.date) - new Date(a.commit.author.date));
             commits = commits.slice(0, 5);
-
             const renderCommits = (commits) => {
               return commits.reduce((prev, curr) => {
                 return `${prev}| <img width="24" src="${curr.commit.author.avatarUrl}" alt="${curr.commit.author.name}" /> ${curr.commit.author.name} |${new Date(curr.commit.author.date).toLocaleString()}|${curr.repository}|${curr.commit.message}|\n`;
